--- a/_layouts/release.html
+++ b/_layouts/release.html
@@ -1,15 +1,10 @@
 ---
-layout: default
+layout: post
 ---
-<div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+<div class="release-download">
+    <a href="{{ post.download_url }}">{{ post.download_title }}</a>
 </div>
+
+
+{{ content }}
