--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,6 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/rss.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="shortcut icon" href="{{ "/assets/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
+
+  <script src="{{ "/assets/js/jquery.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
 </head>
