--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <p class="text">
         &copy; Kelvin Mo.
         <a href="{{ site.sourceforge.project_url }}">SourceForge</a>.
-        <a href="{{ site.github.repository_url }}">Github</a>.
+        <a href="{{ site.github.owner_url }}">Github</a>.
       </p>
     </div>
 
