--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -90,6 +90,7 @@ h1, h2, h3, h4, h5, h6 {
  */
 a {
     color: $brand-color;
+    font-weight: bold;
     text-decoration: none;
 
     &:visited {
