--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,6 +100,10 @@
     font-size: 15px;
     color: $grey-color;
     text-align: right;
+
+    a {
+        font-weight: normal;
+    }
 }
 
 /**
