--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,6 +24,7 @@ $brand-color:      #1144aa;
 $grey-color:       #888888;
 $grey-color-light: #cccccc;
 $grey-color-dark:  #666666;
+$grey-color-super-light: #eeeeee;
 
 // Width of the content area
 $content-width:    800px;
