Special formatting for home page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,6 +20,7 @@ $table-padding:    0.3em;
 $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #1144aa;
+$brand-color-light: #4488ee;
 
 $grey-color:       #888888;
 $grey-color-light: #cccccc;
