--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -185,6 +185,86 @@
 
 
 /**
+ * Home page
+ */
+.home {
+    .hero-panel {
+        background: linear-gradient(to bottom, $grey-color-super-light 0%, $grey-color-light 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+        padding: $spacing-unit / 2;
+        margin-bottom: $spacing-unit;
+
+        .hero-content {
+            color: $grey-color-dark;
+            font-size: $large-font-size ;
+        }
+
+        .hero-title {
+            color: #000000;
+            font-size: $large-font-size * 2;
+            font-weight: bold;
+        }
+    }
+
+    .panels-wrapper {
+        margin-left: -$spacing-unit / 2;
+        @extend %clearfix;
+    }
+
+    .panel {
+        float: left;
+        margin-bottom: $spacing-unit / 2;
+        padding-left: $spacing-unit / 2;
+    }
+
+    .panel-col-1 {
+        width: -webkit-calc(33% - (#{$spacing-unit} / 2));
+        width:         calc(33% - (#{$spacing-unit} / 2));
+    }
+
+    .panel-col-2 {
+        width: -webkit-calc(33% - (#{$spacing-unit} / 2));
+        width:         calc(33% - (#{$spacing-unit} / 2));
+    }
+
+    .panel-col-3 {
+        width: -webkit-calc(33% - (#{$spacing-unit} / 2));
+        width:         calc(33% - (#{$spacing-unit} / 2));
+    }
+
+    @include media-query($on-palm) {
+        .panel {
+            float: none;
+            width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+            width:         calc(100% - (#{$spacing-unit} / 2));
+        }
+    }
+
+    a.front-link {
+        color: #ffffff;
+        display: inline-block;
+        margin: ($spacing-unit / 2) 0;
+        padding: ($spacing-unit / 4) ($spacing-unit / 2);
+        background: linear-gradient(to bottom, $grey-color 0%, $grey-color-dark 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+
+        &:hover {
+            background-color: $grey-color-dark;
+            background-image: none;
+        }
+    }
+
+    .hero-panel a.front-link, .downloads-panel a.front-link {
+        background: linear-gradient(to bottom, $brand-color-light 0%, $brand-color 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+        &:hover {
+            background-color: $brand-color-light;
+            background-image: none;
+        }
+    }
+
+    .hero-panel a.front-link { font-size: $large-font-size; }
+}
+
+
+/**
  * Special formatting
  */
 .release-download {
