Navigation menu formatting

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    background-color: $grey-color-dark;
+    color: $grey-color-light;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -11,41 +11,48 @@
 }
 
 .site-title {
-    font-size: 26px;
+    color: #ffffff;
+    font-size: $large-font-size;
+    text-transform: uppercase;
     line-height: 56px;
-    letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: #ffffff;
     }
 }
 
 .site-nav {
     float: right;
-    line-height: 56px;
 
     .menu-icon {
         display: none;
     }
 
     .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
+        color: #ffffff;
+        line-height: 56px;
+        display: inline-block;
+        padding: 0 10px;
+    }
 
-        // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
-            margin-left: 20px;
-        }
+    .current {
+        background-color: #ffffff;
+        color: $grey-color-dark;
+    }
+
+    .menu-download {
+        background: linear-gradient(to bottom, $brand-color-light 0%, $brand-color 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+        color: #ffffff !important;
     }
 
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
         right: 30px;
-        background-color: $background-color;
+        background-color: $grey-color-dark;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
@@ -64,7 +71,7 @@
                 height: 15px;
 
                 path {
-                    fill: $grey-color-dark;
+                    fill: $grey-color-light;
                 }
             }
         }
@@ -80,8 +87,18 @@
         }
 
         .page-link {
+            line-height: $base-line-height;
             display: block;
             padding: 5px 10px;
+        }
+
+        .current {
+            background-color: $grey-color-dark;
+            color: #ffffff;
+        }
+
+        .menu-download {
+            background-image: none;
         }
     }
 }
