--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -1,14 +1,41 @@
----
-layout: default
----
-<div class="post">
+<!DOCTYPE html>
+<html>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+  {% include head.html %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+  <body>
 
-</div>
+    {% include header.html %}
+    {% include doc_header.html %}
+
+    <div class="page-content">
+      <div class="wrapper">
+        <div class="post">
+
+          <header class="post-header">
+            <h1 class="post-title">{{ page.title }}</h1>
+          </header>
+
+          <article class="post-content">
+            {{ content }}
+          </article>
+
+        </div>
+      </div>
+    </div>
+
+    {% include footer.html %}
+
+    <script type="text/javascript">
+(function ($) {
+    $(document).ready(function () {
+        $('.doc-header h2').click(function() {
+          $('.doc-header .doc-sections').slideToggle();
+        });
+    });
+})(jQuery);
+    </script>
+
+  </body>
+
+</html>
