--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -104,6 +104,73 @@
 }
 
 
+/**
+ * Documentation header
+ */
+.doc-header {
+    background-color: $grey-color;
+    color: #ffffff;
+    padding: ($spacing-unit / 4) 0;
+
+    h2 {        
+        font-weight: bold;
+        font-size: $base-font-size;
+        margin-bottom: 0;
+        cursor: pointer;
+        padding-right: 10px;
+    }
+    h2:after {
+        content: '';
+        display: inline-block;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 5px 0 5px 8.7px;
+        border-color: transparent transparent transparent #ffffff;
+    }
+
+    h3 {        
+        font-weight: bold;
+        font-size: $base-font-size;
+        margin-bottom: 5px;
+    }
+
+    .doc-sections { 
+        display: none;
+        margin-left: -$spacing-unit / 2;
+        margin-top: $spacing-unit / 2;
+        @extend %clearfix;
+    }
+
+    .doc-section {
+        float: left;
+        margin-bottom: $spacing-unit / 2;
+        padding-left: $spacing-unit / 2;
+        width: -webkit-calc(25% - (#{$spacing-unit} / 2));
+        width:         calc(25% - (#{$spacing-unit} / 2));
+    }
+
+    .doc-section ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+
+    .doc-section li {
+        line-height: 1.1;
+        margin-bottom: 5px;
+    }
+
+    .doc-section a {
+        color: #ffffff !important;
+        font-weight: normal;
+    }
+}
+@include media-query($on-palm) {
+    .doc-header {
+        display: none;
+    }
+}
 
 /**
  * Site footer
