Fixed navigation formatting

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -39,7 +39,7 @@
     }
 
     .current {
-        background-color: #ffffff;
+        background-color: $background-color;
         color: $grey-color-dark;
     }
 
