--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -16,6 +16,10 @@
             <h1 class="post-title">{{ page.title }}</h1>
           </header>
 
+          {% if site.github.repository_url %}
+          <!-- {{site.github.repository_url}}/blob/gh-pages/{{page.path}} -->
+          {% endif %}
+
           <article class="post-content">
             {{ content }}
           </article>
