--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -17,7 +17,9 @@
           </header>
 
           {% if site.github.repository_url %}
-          <!-- {{site.github.repository_url}}/blob/gh-pages/{{page.path}} -->
+          <div class="edit-docs">
+          <a href="{{site.github.repository_url}}/blob/master{{ page.path | replace:'/repo',''}}" title="Help improve our documentation!">Edit this page in GitHub</a>
+          </div>
           {% endif %}
 
           <article class="post-content">
