--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -369,3 +369,18 @@
         }
     }
 }
+
+.edit-docs {
+    font-size: $small-font-size;
+    margin: ($spacing-unit / 2) 0;
+
+    a, a:visited { 
+        color: $grey-color;
+        border-bottom: 1px dotted $grey-color;
+    }
+    a:hover {
+        color: $text-color;
+        text-decoration: none;
+        border-bottom: 1px solid $text-color;
+    }
+}
