--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -370,6 +370,23 @@
     }
 }
 
+.doc-toc {
+    display: inline-block;
+    border: 1px solid $grey-color-light;
+    background: $grey-color-super-light;
+    margin: ($spacing-unit / 2) 0;
+    padding: ($spacing-unit / 4) ($spacing-unit / 2);
+
+    h4 {
+        font-size: $base-font-size; 
+        font-weight: bold;
+    }
+
+    ul { margin-bottom: 0; }
+    li { font-size: $small-font-size; }
+    a { font-weight: normal; }
+}
+
 .edit-docs {
     font-size: $small-font-size;
     margin: ($spacing-unit / 2) 0;
