--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -10,7 +10,7 @@
 
     <div class="page-content">
       <div class="wrapper">
-        <div class="post">
+        <div class="post doc">
 
           <header class="post-header">
             <h1 class="post-title">{{ page.title }}</h1>
