--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,7 @@ lunr_exclude: true
 $base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
+$super-small-font-size:  $base-font-size * 0.7;
 $large-font-size: $base-font-size * 1.2;
 $base-line-height: 1.5;
 
