--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -130,13 +130,15 @@ blockquote {
  */
 pre,
 code {
+    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
     font-size: 15px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
-    background-color: #eef;
+    background-color: rgba($text-color, 0.2);
 }
 
 code {
+    border-color: rgba($text-color, 0.2);
     padding: 1px 5px;
 }
 
