Updated style for inline code within code blocks

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -138,7 +138,6 @@ code {
 }
 
 code {
-    border-color: rgba($text-color, 0.2);
     padding: 1px 5px;
 }
 
@@ -148,6 +147,7 @@ pre {
 
     > code {
         border: 0;
+        background-color: transparent;
         padding-right: 0;
         padding-left: 0;
     }
