--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,6 +37,10 @@
         display: inline-block;
         padding: 0 10px;
     }
+    
+    .page-link.fa:hover {
+        text-decoration: none;
+    }
 
     .current {
         background-color: $background-color;
