--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
   <link rel="shortcut icon" href="{{ "/assets/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
 
   <script src="{{ "/assets/js/jquery.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+  <script src="{{ "/assets/js/anchor.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
 </head>
