Update "Edit on GitHub" link

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -18,7 +18,7 @@
 
           {% if site.github.repository_url %}
           <div class="edit-docs">
-          <a href="{% raw %}{% github_edit_link %}{% endraw %}" title="Help improve our documentation!">Edit this page in GitHub</a>
+          <a href="{% github_edit_link %}" title="Help improve our documentation!">Edit this page in GitHub</a>
           </div>
           {% endif %}
 
