Beautify search form

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -54,6 +54,7 @@ $on-laptop:        800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
+        "flexbox",
         "layout",
         "syntax-highlighting"
 ;
