Move alpinejs to global

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,5 @@
 
   <script src="{{ "/assets/js/jquery.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
   <script src="{{ "/assets/js/anchor.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.3.5/dist/alpine.min.js" defer></script>
 </head>
