--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset=utf-8>
     <title>Redirecting...</title>
-    <link rel=canonical href="{{ page.redirect }}">
-    <meta http-equiv=refresh content="0; url={{ page.redirect }}">
+    <link rel=canonical href="{{ page.redirect.to }}">
+    <meta http-equiv=refresh content="0; url={{ page.redirect.to }}">
   </head>
   <body>
     <h1>Redirecting...</h1>
-    <a href="{{ page.redirect }}">Click here if you are not redirected.</a>
-    <script>location='{{ page.redirect }}'</script>
+    <a href="{{ page.redirect.to }}">Click here if you are not redirected.</a>
+    <script>location='{{ page.redirect.to }}'</script>
   </body>
 </html>
