--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,6 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/rss.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="shortcut icon" href="{{ "/assets/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
 
-  <script src="{{ "/assets/js/anchor.min.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-  <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.6.0/dist/alpine.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/anchor-js@3.2.2/anchor.min.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.6.0/dist/alpine.js" type="text/javascript" defer></script>
 </head>
