--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,7 +14,6 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font-size: $base-font-size;
     line-height: $base-line-height;
     font-weight: 300;
     color: $text-color;
@@ -57,7 +56,7 @@ figure > img {
 }
 
 figcaption {
-    font-size: $small-font-size;
+    font-size: $font-small;
 }
 
 
