--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -91,7 +91,7 @@
         }
 
         .page-link {
-            line-height: $base-line-height;
+            //line-height: $base-line-height;
             display: block;
             padding: 5px 10px;
         }
@@ -452,7 +452,7 @@
             display: inline-block;
             padding: 2px 5px;
             border-radius: 3px;
-            font-size: $super-font-small;
+            font-size: $font-xsmall;
             font-weight: bold;
             text-transform: uppercase;
             background-color: $grey-color-dark;
