Start plain html layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html>
+---
+layout: html
+---
 
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
-
-  </body>
-
-</html>
+<div class="page-content">
+  <div class="wrapper">
+    {{ content }}
+  </div>
+</div>
