--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,7 +39,7 @@ $grey-color-super-light: #eeeeee;
 @import
         "base",
         "flexbox",
-        "layout",
+        "components",
         "syntax-highlighting"
 ;
 
